Workflow de Testes no Github Actions

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:cycloud": "npx cypress run --record --key c427904e-50f9-4804-9138-7da572e5b794"
   },
   "keywords": [],
   "author": "",
