Re-enable push trigger for Cypress E2E Tests workflow

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,6 +1,9 @@
 name: Cypress E2E Tests
-# on: [push]
+# on:
 on:
+    push:
+      branches:
+        - main
     workflow_dispatch:
 jobs:
   tests:
