--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,6 +5,10 @@ on:
       branches:
         - main
     workflow_dispatch:
+      inputs:
+          spec:
+            description: 'Fill in a spec.js file or leave the default'
+            default: 'cypress/e2e/*'
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -36,6 +40,7 @@ jobs:
           # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
           record: true
           parallel: true # Runs test in parallel using settings above
+
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
           # in GitHub repo → Settings → Secrets → Actions
