Refactor Cypress workflow to include parallelization and recording for Chrome, Electron, and Firefox tests

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -10,7 +10,7 @@ on:
             description: 'Fill in a spec.js file or leave the default'
             default: 'cypress/e2e/*'
 jobs:
-  tests:
+  chrome-tests:
     runs-on: ubuntu-latest
     container:
         image: cypress/browsers:22.16.0 # Uses Cypress Docker image with browsers
@@ -33,9 +33,78 @@ jobs:
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
           install-command: npm install
           wait-on: 'https://petlov.vercel.app' # Waits for above
-          #browser: chrome # Runs tests in Chrome browser
-          #browser: firefox # Runs tests in Firefox browser
-          #browser: electron # Runs tests in Electron browser
+          browser: chrome # Runs tests in Chrome browser
+          group: Chrome Tests # Group name for parallelization
+          # Records to Cypress Cloud 
+          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
+          record: true
+          parallel: true # Runs test in parallel using settings above
+        env:
+          # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
+          # in GitHub repo → Settings → Secrets → Actions
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  electron-tests:
+    runs-on: ubuntu-latest
+    container:
+        image: cypress/browsers:22.16.0 # Uses Cypress Docker image with browsers
+        options: --user 1001 # Uses non-root user in the container
+    # Runs tests in parallel with matrix strategy https://docs.cypress.io/guides/guides/parallelization
+    # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
+    # Also see warning here https://github.com/cypress-io/github-action#parallel
+    strategy:
+      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
+      matrix:
+        containers: [1, 2] # Uses 2 parallel instances
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Run E2E Tests
+        # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
+        uses: cypress-io/github-action@v6
+        with:
+          # Starts web server for E2E tests - replace with your own server invocation
+          # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
+          install-command: npm install
+          wait-on: 'https://petlov.vercel.app' # Waits for above
+          browser: electron # Runs tests in Electron browser
+          group: Electron Tests # Group name for parallelization
+          # Records to Cypress Cloud 
+          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
+          record: true
+          parallel: true # Runs test in parallel using settings above
+        env:
+          # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
+          # in GitHub repo → Settings → Secrets → Actions
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  firefox-tests:
+    runs-on: ubuntu-latest
+    container:
+        image: cypress/browsers:22.16.0 # Uses Cypress Docker image with browsers
+        options: --user 1001 # Uses non-root user in the container
+    # Runs tests in parallel with matrix strategy https://docs.cypress.io/guides/guides/parallelization
+    # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
+    # Also see warning here https://github.com/cypress-io/github-action#parallel
+    strategy:
+      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
+      matrix:
+        containers: [1, 2] # Uses 2 parallel instances
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Run E2E Tests
+        # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
+        uses: cypress-io/github-action@v6
+        with:
+          # Starts web server for E2E tests - replace with your own server invocation
+          # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
+          install-command: npm install
+          wait-on: 'https://petlov.vercel.app' # Waits for above
+          browser: firefox # Runs tests in Firefox browser
+          group: Firefox Tests # Group name for parallelization
           # Records to Cypress Cloud 
           # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
           record: true
